--- a/MHW Randomizer/Controls/Misc.xaml
+++ b/MHW Randomizer/Controls/Misc.xaml
@@ -62,6 +62,11 @@
                 <StackPanel Orientation="Horizontal"
                         Margin="0 5">
                     <StackPanel>
+                        <CheckBox Content="Make All Quests 1 Player"
+                              IsChecked="{Binding OnePlayerQuests, Source={x:Static local:IoC.Settings}}"
+                              Margin="5 4"
+                              ToolTip="Makes it so if you're playing solo you don't need to change player count to 1 so the prep message doesn't appear"
+                              ToolTipService.ShowDuration="10000"/>
                         <CheckBox Content="Faster Starter Kinsects"
                               IsChecked="{Binding FasterKinsects, Source={x:Static local:IoC.Settings}}"
                               Margin="5 4"
