--- a/MHW Randomizer/Controls/Monster.xaml
+++ b/MHW Randomizer/Controls/Monster.xaml
@@ -19,7 +19,7 @@
                 BorderThickness="1"
                 Margin="5">
             <StackPanel Margin="0 5">
-                <TextBlock Text="A bit buggy some will have 'phantom' element attacks, where sometimes they will have a 'aura' around them with certain actions that will inflict damage and elements onto you"
+                <TextBlock Text='A bit buggy some will have "phantom" element attacks, where sometimes they will have a "aura" around them with certain actions that will inflict damage and elements onto you. &#xA;Its less buggy and chaotic with the only changing existing elements/statuses options'
                            Margin="5"
                            TextWrapping="Wrap"/>
                 <StackPanel Orientation="Horizontal">
@@ -32,12 +32,18 @@
                         <CheckBox Content="Random Monster Status Effect"
                                   IsChecked="{Binding RandomMonsterAttackStatus, Source={x:Static local:IoC.Settings}}"
                                   Margin="5, 10, 5, 4"
-                                  ToolTip="Gives the monsters a random status and chance to inflict the player with on some attacks (30% chance to add it to an attack) &#xA;(eg. bleed, paralysis, stun, etc (Some monster don't get a status))(Will keep stun value)"
+                                  ToolTip="Gives the monsters a random status and chance to inflict the player with on some attacks (30% chance to add it to an attack) &#xA;(Doesn't affect projectile attacks) &#xA;(eg. bleed, paralysis, stun, etc (Some monster don't get a status))(Will keep stun value)"
+                                  ToolTipService.ShowDuration="10000"/>
+                        <CheckBox Content="Only Change Existing Statuses"
+                                  IsChecked="{Binding OnlyChangeExistingStatus, Source={x:Static local:IoC.Settings}}"
+                                  Margin="12, 4"
+                                  ToolTip="Less buggy and chaotic and doesn't have the phantom status attacks"
+                                  IsEnabled="{Binding RandomMonsterAttackStatus, Source={x:Static local:IoC.Settings}}"
                                   ToolTipService.ShowDuration="10000"/>
                         <CheckBox Content="Different Status Effect Per Attack"
                                   IsChecked="{Binding EachAttackDifferentStatus, Source={x:Static local:IoC.Settings}}"
                                   Margin="12, 4"
-                                  ToolTip="Each attack that gets chosen to have a status inflicted, will have the status randomly selected again"
+                                  ToolTip="Each attack that gets chosen to have a status inflicted will have the status randomly selected again"
                                   IsEnabled="{Binding RandomMonsterAttackStatus, Source={x:Static local:IoC.Settings}}"
                                   ToolTipService.ShowDuration="10000"/>
                         <CheckBox Content="Multiple Statuses"
@@ -51,7 +57,19 @@
                         <CheckBox Content="Random Monster Attack Element"
                                   IsChecked="{Binding RandomMonsterElement, Source={x:Static local:IoC.Settings}}"
                                   Margin="5, 4"
-                                  ToolTip="Gives the monsters a random attack element for some of their attacks (30% chance to add it to an attack) &#xA;(Inflicts stuff like frostblight, and burn)(Also increases the monster's attack a bit)"
+                                  ToolTip="Gives the monsters a random attack element for some of their attacks (30% chance to add it to an attack) &#xA;(Doesn't affect projectile attacks) &#xA;(Inflicts stuff like frostblight, and burn)(Also increases the monster's attack a bit)"
+                                  ToolTipService.ShowDuration="10000"/>
+                        <CheckBox Content="Only Change Existing Elements"
+                                  IsChecked="{Binding OnlyChangeExistingElement, Source={x:Static local:IoC.Settings}}"
+                                  Margin="12, 4"
+                                  ToolTip="Less buggy and chaotic and doesn't have the phantom element attacks"
+                                  IsEnabled="{Binding RandomMonsterElement, Source={x:Static local:IoC.Settings}}"
+                                  ToolTipService.ShowDuration="10000"/>
+                        <CheckBox Content="Different Element Per Attack"
+                                  IsChecked="{Binding EachAttackDifferentElement, Source={x:Static local:IoC.Settings}}"
+                                  Margin="12, 4"
+                                  ToolTip="Each attack that gets chosen to have a element will have the element randomly selected again"
+                                  IsEnabled="{Binding RandomMonsterElement, Source={x:Static local:IoC.Settings}}"
                                   ToolTipService.ShowDuration="10000"/>
                         <CheckBox Content="Increase Element Damage"
                                   IsChecked="{Binding IncreaseElementPower, Source={x:Static local:IoC.Settings}}"
