--- a/MHW Randomizer/Controls/Armour.xaml
+++ b/MHW Randomizer/Controls/Armour.xaml
@@ -9,6 +9,7 @@
     <StackPanel>
         <Grid>
             <TextBlock Text="Recipes"
+                       Padding="1.5 0"
                        Margin="15 -4 0 0"
                        Background="White"
                        HorizontalAlignment="Left"
@@ -60,6 +61,7 @@
         </Grid>
         <Grid>
             <TextBlock Text="Stats"
+                       Padding="1.5 0"
                        Margin="15 -4 0 0"
                        Background="White"
                        HorizontalAlignment="Left"
