--- a/MHW Randomizer/Controls/Shop.xaml
+++ b/MHW Randomizer/Controls/Shop.xaml
@@ -8,13 +8,14 @@
              d:DesignHeight="450" d:DesignWidth="600">
     <Grid VerticalAlignment="Top">
         <TextBlock Text="Shop"
-                       Margin="15 -4 0 0"
-                       Background="White"
-                       HorizontalAlignment="Left"
-                       VerticalAlignment="Top"
-                       Panel.ZIndex="1"
-                       FontWeight="Bold"
-                       Height="16"/>
+                   Padding="1.5 0"
+                   Margin="15 -4 0 0"
+                   Background="White"
+                   HorizontalAlignment="Left"
+                   VerticalAlignment="Top"
+                   Panel.ZIndex="1"
+                   FontWeight="Bold"
+                   Height="16"/>
         <Border BorderBrush="Gray"
                 BorderThickness="1"
                 Margin="5">
